test/tasty/neg/src-2/TestCtxFns.check
TestCtxFns_fail.scala:15: error: Unsupported Scala 3 context function type: tastytest.CtxFns.Context ?=> T in bounds of type Contextual; found in object tastytest.CtxFns.
    puts(23)(ctx)
    ^
TestCtxFns_fail.scala:22: error: Unsupported Scala 3 context function type: X ?=> X in bounds of type F; found in class tastytest.CtxFns.CtxBox.
    val box = new CtxBox[Contextual]
                  ^
2 errors
